Fixed color picker container z-index

--- a/assets/dev/scss/editor/panel/_color-picker.scss
+++ b/assets/dev/scss/editor/panel/_color-picker.scss
@@ -2,7 +2,7 @@
 
 	&.wp-picker-active {
 		position: absolute;
-		z-index: 1;
+		z-index: 10000;
 		top: 0;
 		@include end(7px);
 		background-color: #fff;
